<resources>
    <string name="app_name">SkillTrack</string>
    <string name="user_registration">User Registration</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="date">Date</string>
    <string name="timesheetEntry">Create a New Timesheet Entry</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="numKills">Kills</string>
    <string name="numDeaths">Deaths</string>
    <string name="numAssists">Assists</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="upload_image">Upload Image</string>
    <string name="categoryname">CategoryName</string>
    <string name="noCatAdded">No Categories Added</string>
    <string name="noTimeEntry">No Timesheet Entries Added</string>
    <string name="min_hours_per_day">Min Hours Per Day</string>
    <string name="view_categories">View Categories</string>
    <string name="newCat">Add a New Category</string>
    <string name="dashboard">Dashboard</string>
    <string name="enddate">End Date</string>
    <string name="filter">Filter</string>
    <string name="startDate">Start Date</string>
    <string name="title_activity_game_stats_report">GameStatsReport</string>
    <string name="avg_kd">Avg KD:</string>
    <string name="avg_kills">Avg Kills:</string>
    <string name="avg_deaths">Avg Deaths:</string>
    <string name="avg_assists">Avg Assists:</string>
    <string name="categories">Categories</string>
</resources>