<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBg"
    android:orientation="vertical"
    tools:context=".TimesheetActivity">


    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bg1" />

    <TextView

        android:id="@+id/tvHeader"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"

        android:padding="5dp"
        android:shadowColor="#fff"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="8"
        android:text="@string/timesheetEntry"

        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />


    <Button

        android:id="@+id/endTimeButton"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAssists" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="450px"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeButton">

        <!--Button for choosing image from gallery-->

        <!--Image View for showing image chosen from gallery-->

        <Button
            android:id="@+id/btnChoose"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/upload_image" />

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fadingEdge="vertical"
            android:scaleType="centerCrop" />
    </LinearLayout>

    <Button

        android:id="@+id/submitButton"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_below="@id/descriptionEditText"

        android:text="@string/submit"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeButton"
        app:layout_constraintVertical_bias="0.934" />

    <Button
        android:id="@+id/startDateButton"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAssists" />

    <Button

        android:id="@+id/startTimeButton"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_below="@id/startDateButton"

        android:layout_marginTop="36dp"

        android:layout_toEndOf="@id/startDateButton"
        android:text="@string/start_time"
        app:layout_constraintEnd_toStartOf="@+id/endTimeButton"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toEndOf="@+id/startDateButton"
        app:layout_constraintTop_toBottomOf="@+id/etAssists" />

    <EditText

        android:id="@+id/descriptionEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"

        android:alpha="0.50"
        android:background="@color/BgSecondary"
        android:hint="@string/enter_description"
        android:importantForAutofill="no"

        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner"
        app:layout_constraintVertical_bias="0.067"
        tools:ignore="TextFields,TextContrastCheck" />

    <EditText

        android:id="@+id/etDeaths"
        android:layout_width="85dp"
        android:layout_height="48dp"

        android:alpha="0.50"
        android:background="@color/BgSecondary"
        android:hint="@string/numDeaths"
        android:importantForAutofill="no"
        android:inputType="number"

        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="TextFields,TextContrastCheck" />

    <EditText

        android:id="@+id/etAssists"
        android:layout_width="85dp"
        android:layout_height="48dp"

        android:alpha="0.50"
        android:background="@color/BgSecondary"
        android:hint="@string/numAssists"
        android:importantForAutofill="no"

        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="TextFields,TextContrastCheck" />

    <EditText

        android:id="@+id/etKills"
        android:layout_width="85dp"
        android:layout_height="48dp"

        android:alpha="0.50"
        android:background="@color/BgSecondary"
        android:hint="@string/numKills"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="8dp"

        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="TextFields,TextContrastCheck" />

    <Spinner
        android:id="@+id/categorySpinner"

        android:layout_width="300dp"
        android:layout_height="48dp"
        android:alpha="0.50"
        android:background="@color/BgSecondary"
        android:minHeight="48dp"
        android:padding="8dp"
        android:popupBackground="@color/BgSecondary"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@color/BgSecondary"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:menu="@menu/bottom_menu"></com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>